# KdeContactSearch

./: CMakeLists.txt
src/: CMakeLists.txt  SearchTask.cpp  SearchTask.h  main.cpp
